rest-to-mq/rules/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rest-to-mq-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest-to-mq
spec:
  hosts:
  - "*"
  gateways:
  - rest-to-mq-gateway
  http:
  - match:
    - uri:
        prefix: /mx
    route:
    - destination:
        host: rest-to-mq
        port:
          number: 8080
