rest-to-mq/rules/mqgateway2.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mq-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller 
  servers:
  - port:
      number: 31414
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mq-active
spec:
  hosts:
  - "*"
  gateways:
  - mq-gateway
  tcp:
  - match:
    - port: 31414
    route:
    - destination:
        host: mq-backup
        port:
          number: 1414
